using enum instead of strings for roles

--- a/ChoreBuddies.Frontend/Features/Household/HouseholdMembersManagement.razor
+++ b/ChoreBuddies.Frontend/Features/Household/HouseholdMembersManagement.razor
@@ -133,7 +133,7 @@
     public bool IsChild(string? role)
     {
         if (string.IsNullOrEmpty(role)) return true; 
-        return String.Compare(role, "child", true) == 0;
+        return String.Compare(role, AuthConstants.RoleChild, true) == 0;
     }
     private async Task SaveRoles()
     {
